--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
         "laravel/ui": "^3.2",
         "laravelcollective/html": "^6.2",
         "maatwebsite/excel": "^3.1",
-        "uxweb/sweet-alert": "^2.0"
+        "spatie/laravel-permission": "^5.11",
+        "spatie/laravel-sluggable": "^3.5",
+        "uxweb/sweet-alert": "^2.0",
+        "yajra/laravel-datatables-oracle": "^9.21"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
