--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
-        "vue-loader": "^15.9.5",
+        "vue-loader": "^17.3.0",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@ckeditor/ckeditor5-upload": "^40.0.0",
+        "@vue/compiler-sfc": "^3.3.6",
+        "babel-loader": "^9.1.3"
     }
 }
