feat: Integrate AI services (Gemini, OpenAI, Ollama) for quiz generation, introduce settings management, and add SweetAlert notifications.

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,16 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# AI Provider Selection (openai, ollama, gemini)
+AI_PROVIDER=openai
+
+# OpenAI Configuration
+OPENAI_API_KEY=
+
+# Ollama Configuration (Local AI)
+OLLAMA_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.1:8b
+
+# Gemini Configuration
+GEMINI_API_KEY=
