--- a/composer.json
+++ b/composer.json
@@ -8,35 +8,38 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "barryvdh/laravel-dompdf": "^0.9.0",
-        "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.12",
-        "laravel/passport": "^10.3",
-        "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.2",
-        "laravelcollective/html": "^6.2",
-        "maatwebsite/excel": "^3.1",
-        "spatie/laravel-permission": "^5.11",
-        "spatie/laravel-sluggable": "^3.5",
-        "uxweb/sweet-alert": "^2.0",
-        "yajra/laravel-datatables-oracle": "^9.21"
+        "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "google-gemini-php/client": "^2.7",
+        "guzzlehttp/guzzle": "^7.8",
+        "laravel/framework": "^11.0",
+        "laravel/passport": "^12.0",
+        "laravel/tinker": "^2.9",
+        "laravel/ui": "^4.5",
+        "maatwebsite/excel": "^3.1.55",
+        "mfonte/laravel-collective-html": "^1.0",
+        "openai-php/client": "^0.18.0",
+        "realrashid/sweet-alert": "^7.3",
+        "spatie/laravel-permission": "^6.4",
+        "spatie/laravel-sluggable": "^3.6",
+        "yajra/laravel-datatables-oracle": "^11.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.9.1",
-        "laravel/breeze": "^1.1",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "fakerphp/faker": "^1.23",
+        "laravel/sail": "^1.26",
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^8.1",
+        "phpunit/phpunit": "^11.0",
+        "spatie/laravel-ignition": "^2.4"
     },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
+        }
     },
     "extra": {
         "laravel": {
@@ -55,7 +58,7 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
